tests/syntax-error/syntax-error.arr
use context essentials2020

provide: leap eend

fun leap(year):
  true
end
